--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ h1,
 h2 {
   text-align: center;
   padding: 10px;
-  margin: 20px;
+  margin: 10px;
 }
 h1 {
   font-family: var(--primary-font);
@@ -29,6 +29,7 @@ h3 {
 p {
   font-family: var(--third-font);
   line-height: 30px;
+  margin-bottom: 50px;
 }
 small {
   font-size: 25px;
@@ -36,7 +37,7 @@ small {
 }
 img {
   display: block;
-  margin: 0 auto;
+  margin: 5px auto;
 }
 .contact-list {
   list-style: none;
@@ -69,10 +70,13 @@ img {
 .primary-button {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
+  margin-top: 20px;
   color: white;
   border-radius: 4px;
   padding: 20px 15px;
   text-decoration: none;
+  text-align: center;
+  max-width: 200px;
 }
 .primary-button:hover {
   color: rgb(223, 248, 227);
@@ -86,6 +90,8 @@ img {
   border-radius: 4px;
   padding: 20px 15px;
   text-decoration: none;
+  text-align: center;
+  max-width: 200px;
 }
 .secondary-button:hover {
   background: var(--primary-color);
@@ -105,15 +111,33 @@ img {
   max-height: 35px;
   padding: 0;
 }
+.project-description {
+  margin-top: 50px;
+}
+.language-img img {
+  max-width: 100%;
+}
+
 @media (max-width: 960px) {
   h1,
   h2 {
-    font-size: 20px;
     padding: 0px;
     margin: 10px;
+  } 
+  h2 {
+    font-size: 20px;
+    
+  }
+  span {
+    font-size: 10px;
   }
   p {
     font-size: 12px;
+    line-height: 20px;
+    margin-bottom: 15px;
+  }
+  ul {
+    padding-inline-start: 0px;
   }
   .hero-picture {
     padding: 50px;
@@ -123,4 +147,23 @@ img {
     position: relative;
     top: -48px;
   }
+  .project-description {
+    margin-top: 0px;
+  }
+  .secondary-button,
+  .primary-button {
+    padding: 10px 10px;
+    display: block;
+    margin: 0 auto;
+  }
+  small {
+    font-size: 16px;
+  }
+  .language-img img {
+    max-width: 90px;
+  }
+  }
+.contact-list {
+    margin-bottom: 30px;
+}
 }
