--- a/src/styles.css
+++ b/src/styles.css
@@ -57,7 +57,7 @@ img {
   background-position: center center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 500px;
+  height: 600px;
 }
 
 .h1-heading {
@@ -130,6 +130,7 @@ img {
     font-size: 10px;
   }
   p {
+    text-align: center;
     font-size: 12px;
     line-height: 20px;
     margin-bottom: 15px;
@@ -137,6 +138,9 @@ img {
   ul {
     margin-top: 10px;
     padding-inline-start: 0px;
+  }
+  small {
+    font-size: 16px;
   }
   .hero-picture {
     height: 200px;
@@ -153,13 +157,10 @@ img {
     display: block;
     margin: 0 auto;
   }
-  small {
-    font-size: 16px;
-  }
+
   .language-img img {
     max-width: 90px;
   }
-
   .contact-list {
     margin-bottom: 15px;
   }
