--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,9 @@ body {
   --third-font: "ABeeZee", sans-serif;
 }
 
-h1 {
+h1,
+h4 {
+  font-size: 35px;
   text-align: center;
   font-family: var(--primary-font);
 }
@@ -125,6 +127,10 @@ img {
     margin: 10px;
     font-size: 20px;
   }
+  h1,
+  h4 {
+    font-size: 25px;
+  }
   span {
     font-size: 10px;
   }
@@ -140,6 +146,9 @@ img {
   }
   small {
     font-size: 16px;
+  }
+  .wrap-content {
+    margin-top: 5px;
   }
   .hero-picture {
     height: 200px;
