--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,12 @@ h4 {
   text-align: center;
   font-family: var(--primary-font);
 }
+
+h5 {
+  font-size: 35px;
+  text-align: left;
+  font-family: var(--primary-font);
+}
 h2 {
   text-align: center;
   padding: 10px;
