--- a/src/styles.css
+++ b/src/styles.css
@@ -16,12 +16,6 @@ h4 {
   text-align: center;
   font-family: var(--primary-font);
 }
-
-h5 {
-  font-size: 35px;
-  text-align: left;
-  font-family: var(--primary-font);
-}
 h2 {
   text-align: center;
   padding: 10px;
@@ -34,7 +28,8 @@ h3 {
 }
 p {
   font-family: var(--third-font);
-  line-height: 30px;
+  font-size: 14px;
+  line-height: 25px;
   margin-bottom: 50px;
 }
 small {
@@ -126,7 +121,10 @@ img {
 .contact-pic {
   max-width: 80%;
 }
-
+.about-me-pic {
+  max-width: 100%;
+  height: auto;
+}
 @media (max-width: 960px) {
   h2 {
     padding: 0px;
@@ -172,6 +170,10 @@ img {
     margin: 0 auto;
   }
 
+  .about-me-pic {
+    max-width: 60%;
+    height: auto;
+  }
   .language-img img {
     max-width: 90px;
   }
