--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,9 @@ h2 {
   margin: 10px;
   font-family: var(--secondary-font);
 }
+h2 a {
+  color: black;
+}
 h3 {
   font-family: var(--third-font);
   font-size: 18px;
